force-app/main/default/objects/Ship_To_Affiliation__c/Ship_To_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Affiliated Account</label>
    <nameField>
        <displayFormat>AFF-{00000}</displayFormat>
        <label>Affiliation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>