force-app/main/default/objects/Ship_To_Affiliation__c/fields/Affiliated_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Account_Name__c</fullName>
    <label>Affiliated Ship To Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>