force-app/main/default/objects/Ship_To_Affiliation__c/fields/Affiliated_Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Sold_To_Account__c</fullName>
    <label>Affiliated Sold To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>