force-app/main/default/objects/Ship_To_Affiliation__c/fields/Aurora_Location__c.field-meta.xml
<CustomField>
    <fullName>Aurora_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aurora Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Affiliated Accounts</relationshipLabel>
    <relationshipName>Affiliated_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>