force-app/main/default/objects/Ship_To_Affiliation__c/fields/City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip__c</fullName>
    <formula>City__c &amp; &quot;, &quot; &amp; State_Province__c &amp; &quot; &quot; &amp; Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City/State/Zip</label>
    <type>Text</type>
</CustomField>