force-app/main/default/objects/Ship_To_Affiliation__c/fields/Different_Sold_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Different_Sold_To_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if the Sold To Account is different</inlineHelpText>
    <label>Different Sold To Account?</label>
    <type>Checkbox</type>
</CustomField>