force-app/main/default/objects/Ship_To_Affiliation__c/fields/Different_Sold_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Different_Sold_To_Code__c</fullName>
    <label>Different Sold To Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>