force-app/main/default/objects/Ship_To_Affiliation__c/fields/DWCustomer_Record_2__c.field-meta.xml
<CustomField>
    <fullName>DWCustomer_Record_2__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; DWCustomer_Record__c , DWCustomer_Record__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DWCustomer Record</label>
    <type>Text</type>
</CustomField>