force-app/main/default/objects/Ship_To_Affiliation__c/fields/DWCustomer_Record__c.field-meta.xml
<CustomField>
    <fullName>DWCustomer_Record__c</fullName>
    <label>DWCustomer Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>