force-app/main/default/objects/Ship_To_Affiliation__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Accounts (Parent Account)</relationshipLabel>
    <relationshipName>Ship_To_Affiliation1</relationshipName>
    <type>Lookup</type>
</CustomField>