force-app/main/default/objects/Ship_To_Affiliation__c/fields/Sales_in_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Sales_in_Current_Year__c</fullName>
    <label>Sales in Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>