force-app/main/default/objects/Ship_To_Affiliation__c/fields/Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Code__c</fullName>
    <label>Affiliated Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>