force-app/main/default/objects/Ship_To_Affiliation__c/fields/Total_Previous_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Previous_Year_Sales__c</fullName>
    <label>Total Previous Year Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>