force-app/main/default/objects/Ship_To_Affiliation__c/fields/YTD_Sale_Difference__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sale_Difference__c</fullName>
    <label>YTD Sale Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>