force-app/main/default/objects/Ship_To_Affiliation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Ship_To_Code__c</columns>
    <columns>Affiliated_Account_Name__c</columns>
    <columns>City_State_Zip__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>